# CreditClass

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/plans/: 2026-01-20-creditclass-design.md
notebooks/: knn.ipynb  logistic_regression.ipynb  master.ipynb  neural_network.ipynb  random_forest.ipynb  svm.ipynb  xgboost.ipynb
scripts/: generate_readme_dashboard.py
src/creditclass/: __init__.py  evaluation.py  feature_engineering.py  plots.py  preprocessing.py  training.py
tests/: __init__.py  test_evaluation.py  test_feature_engineering.py  test_preprocessing.py  test_training.py
